@@ -751,7 +751,38 @@ DT.TalentDB = {
 			{  9, 1, 2063, 5, nil, nil,  nil, { 51562, 51563, 51564, 51565, 51566, }, 'TEXTURE', },
 			{ 10, 1, 2064, 1, nil, nil,  nil, { 61295,   nil,   nil,   nil,   nil, }, 'TEXTURE', },
 		},
-		[263] = {
+		[263] = CT.IsWotLKTitan and {
+			{  0, 0,  610, 3, nil, nil,  nil, { 16259, 16295, 52456,   nil,   nil, }, 'TEXTURE', },
+			{  0, 1, 2101, 2, nil, nil,  nil, { 16043, 16130,   nil,   nil,   nil, }, 'TEXTURE', },
+			{  0, 2,  614, 5, nil, nil,  nil, { 17485, 17486, 17487, 17488, 17489, }, 'TEXTURE', },
+			{  1, 0,  609, 2, nil, nil,  nil, { 16258, 16293,   nil,   nil,   nil, }, 'TEXTURE', },
+			{  1, 1,  613, 5, nil, nil,  nil, { 16255, 16302, 16303, 16304, 16305, }, 'TEXTURE', },
+			{  1, 2,  605, 2, nil, nil,  nil, { 16262, 16287,   nil,   nil,   nil, }, 'TEXTURE', },
+			{  1, 3,  607, 3, nil, nil,  nil, { 16261, 16290, 51881,   nil,   nil, }, 'TEXTURE', },
+			{  2, 0,  611, 3, nil, nil,  nil, { 16266, 29079, 29080,   nil,   nil, }, 'TEXTURE', },
+			{  2, 2,  617, 1, nil, nil,  nil, { 43338,   nil,   nil,   nil,   nil, }, 'TEXTURE', },
+			{  2, 3,  601, 3, nil, nil,  nil, { 16254, 16271, 16272,   nil,   nil, }, 'TEXTURE', },
+			{  3, 1,  602, 5,   1,   1,  613, { 16256, 16281, 16282, 16283, 16284, }, 'TEXTURE', },
+			{  3, 2,  615, 5, nil, nil,  nil, { 16252, 16306, 16307, 16308, 16309, }, 'TEXTURE', },
+			{  4, 0, 1647, 2, nil, nil,  nil, { 29192, 29193,   nil,   nil,   nil, }, 'TEXTURE', },
+			{  4, 1,  616, 1, nil, nil,  nil, { 16268,   nil,   nil,   nil,   nil, }, 'TEXTURE', },
+			{  4, 2, 2083, 3, nil, nil,  nil, { 51883, 51884, 51885,   nil,   nil, }, 'TEXTURE', },
+			{  5, 0, 1689, 3, nil, nil,  nil, { 30802, 30808, 30809,   nil,   nil, }, 'TEXTURE', },
+			{  5, 2, 1643, 3, nil, nil,  nil, { 29082, 29084, 29086,   nil,   nil, }, 'TEXTURE', },
+			{  5, 3, 2263, 2, nil, nil,  nil, { 63373, 63374,   nil,   nil,   nil, }, 'TEXTURE', },
+			{  6, 0, 1692, 3,   6,   1, 1690, { 30816, 30818, 30819,   nil,   nil, }, 'TEXTURE', },
+			{  6, 1, 1690, 1,   4,   1,  616, { 30798,   nil,   nil,   nil,   nil, }, 'TEXTURE', },
+			{  6, 2, 23706, 3,   6,   1,  616, { 1283508, 1283509, 1283510,   nil,   nil, }, 'TEXTURE', },--	WoTLK Titan特有
+			{  6, 3,  901, 1, nil, nil,  nil, { 17364,   nil,   nil,   nil,   nil, }, 'TEXTURE', },	--	右移一格
+			{  7, 0, 2055, 3, nil, nil,  nil, { 51525, 51526, 51527,   nil,   nil, }, 'TEXTURE', },
+			{  7, 1, 2249, 1,   6,   1, 1690, { 60103,   nil,   nil,   nil,   nil, }, 'TEXTURE', },
+			{  7, 3, 2054, 2,   6,   3,  901, { 51521, 51522,   nil,   nil,   nil, }, 'TEXTURE', },	--	右移一格
+			{  8, 0, 1691, 3, nil, nil,  nil, { 30812, 30813, 30814,   nil,   nil, }, 'TEXTURE', },
+			{  8, 1, 1693, 1, nil, nil,  nil, { 30823,   nil,   nil,   nil,   nil, }, 'TEXTURE', },
+			{  8, 2, 2056, 2, nil, nil,  nil, { 51523, 51524,   nil,   nil,   nil, }, 'TEXTURE', },
+			{  9, 1, 2057, 5, nil, nil,  nil, { 51528, 51529, 51530, 51531, 51532, }, 'TEXTURE', },
+			{ 10, 1, 2058, 1, nil, nil,  nil, { 51533,   nil,   nil,   nil,   nil, }, 'TEXTURE', },
+		} or {
 			{  0, 0,  610, 3, nil, nil,  nil, { 16259, 16295, 52456,   nil,   nil, }, 'TEXTURE', },
 			{  0, 1, 2101, 2, nil, nil,  nil, { 16043, 16130,   nil,   nil,   nil, }, 'TEXTURE', },
 			{  0, 2,  614, 5, nil, nil,  nil, { 17485, 17486, 17487, 17488, 17489, }, 'TEXTURE', },
