@@ -1,3 +1,6 @@
+2025-12-18
+WotLK Titan Shaman talents update.
+
 2025-11-25
 Fix an error occured when saving talents.
 
